--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 web-solution/target/
+.vs/
+mobile-solution/xamarinrest/xamarinrest/bin/
+mobile-solution/xamarinrest/xamarinrest/obj/
+mobile-solution/xamarinrest/xamarinrest.Android/bin/
+mobile-solution/xamarinrest/xamarinrest.Android/obj/
+mobile-solution/xamarinrest/xamarinrest.iOS/bin/
+mobile-solution/xamarinrest/xamarinrest.iOS/obj/
 .DS_Store
 .node
 .idea
