--- a/mobile-solution/xamarinrest/xamarinrest/xamarinrest.csproj
+++ b/mobile-solution/xamarinrest/xamarinrest/xamarinrest.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />  
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\EmpresasPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
